# Unfolding

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Includeorder.txt  README.md
cmake/: CopyShaders.cmake
shader/: cutTreeFragmentShader.glsl  cutTreeVertexShader.glsl  originalMeshVertexShader.glsl  unfoldMeshFragmentShader.glsl  unfoldMeshVertexShader.glsl  unfoldTreeFragmentShader.glsl  unfoldTreeVertexShader.glsl
src/: CMakeLists.txt  main-Frontend.cpp  main-cli.cpp
src/Collisions/Detector/: CollisionDetector.cpp  CollisionDetector.hpp
src/Collisions/Solver/: CollisionSolverBase.cpp  CollisionSolverBase.hpp
src/Collisions/Solver/2D/: CollisionSolver2DBase.cpp  CollisionSolver2DBase.hpp  PredictingRandomCollisionSolver.cpp  PredictingRandomCollisionSolver.hpp  RandomCollisionSolver.cpp  RandomCollisionSolver.hpp  RandomSolver.cpp  RandomSolver.hpp  TabuSolver.cpp  TabuSolver.hpp
src/Collisions/Solver/2D/Abstracts/Constraints/: NoConstraintsBase.hpp
src/Collisions/Solver/2D/Abstracts/FaceSelector/: MostCollidingFaceSelectorBase.hpp  RandomCollidingFaceSelectorBase.hpp  RandomFaceSelectorBase.hpp  RandomMovableCollidingFaceSelectorBase.hpp
src/Collisions/Solver/2D/Abstracts/LocalMinimumResolver/: NoResolverBase.hpp
src/Collisions/Solver/2D/Abstracts/Stepper/: RandomParentStepperBase.hpp  SelectParentRateClimbHistoryStepperBase.hpp
src/Collisions/Solver/Holistic/: CollisionSolverHolisticBase.cpp  CollisionSolverHolisticBase.hpp
src/Collisions/Solver/Holistic/Geometric/: CollisionSolverHolisticGeometric.cpp  CollisionSolverHolisticGeometric.hpp
src/Datastructures/Helpers/: UnfoldTransformation.hpp
src/Datastructures/Matrices/: LaplaceMatrix.cpp  LaplaceMatrix.hpp  MassMatrix.cpp  MassMatrix.hpp
src/Datastructures/Mesh/: DualGraph.cpp  DualGraph.hpp  DualGraphNode.cpp  DualGraphNode.hpp  FaceList.cpp  FaceList.hpp  Mesh.cpp  Mesh.hpp  MeshIO.cpp  OriginalMesh.cpp  OriginalMesh.hpp  UnfoldMesh.cpp  UnfoldMesh.hpp
src/Datastructures/Polygon/: Polygon2D.cpp  Polygon2D.hpp  PolygonList.cpp  PolygonList.hpp
src/Datastructures/Unfolding/: UnfoldTree.cpp  UnfoldTree.hpp  UnfoldTreeList.cpp  UnfoldTreeList.hpp  UnfoldTreeListIO.cpp
src/Model/: Model2D.cpp  Model2D.hpp  Model3D.cpp  Model3D.hpp  UnfoldModel.cpp  UnfoldModel.hpp
src/SVG/: SVGWriter.cpp  SVGWriter.hpp
src/Transformer/: AngleEqualizeTransformer.cpp  AngleEqualizeTransformer.hpp  ConformalizedMeanCurvatureTransformer.cpp  ConformalizedMeanCurvatureTransformer.hpp  EdgeNormalAlignTransformer.cpp  EdgeNormalAlignTransformer.hpp  GenericTransformer.cpp  GenericTransformer.hpp  MassSpringTransformer.cpp  MassSpringTransformer.hpp
src/Transformer/CCF/: CCFLaplaceTransformer.cpp  CCFLaplaceTransformer.hpp  CCFTransformer.cpp  CCFTransformer.hpp  CCFWillmoreTransformer.cpp  CCFWillmoreTransformer.hpp  CCFZeroTransformer.cpp  CCFZeroTransformer.hpp  DerivedQuaterniond.cpp  DerivedQuaterniond.hpp
src/Unfolding/: BFSUnfolder.cpp  BFSUnfolder.hpp  DFSUnfolder.cpp  DFSUnfolder.hpp  MSTDiffUnfolder.cpp  MSTDiffUnfolder.hpp  MSTQuotientUnfolder.cpp  MSTQuotientUnfolder.hpp  MSTUnfolder.cpp  MSTUnfolder.hpp  SteepestEdgeUnfolder.cpp  SteepestEdgeUnfolder.hpp  Unfolder.cpp  Unfolder.hpp  WeightedSteepestEdgeUnfolder.cpp  WeightedSteepestEdgeUnfolder.hpp
src/Util/: DDGUtil.cpp  DDGUtil.hpp  FileUtil.cpp  FileUtil.hpp  PolygonUtil.cpp  PolygonUtil.hpp
src/View/: Mainwindow.cpp  Mainwindow.hpp  Widget2D.cpp  Widget2D.hpp  Widget3D.cpp  Widget3D.hpp
src/View/Dialogs/: CollisionSolverProgressDialog.cpp  CollisionSolverProgressDialog.hpp  CollisionSolverSelectDialog.cpp  CollisionSolverSelectDialog.hpp
src/View/Drawer/: CutTreeDrawer.cpp  CutTreeDrawer.hpp  DebugDrawer.cpp  DebugDrawer.hpp  Drawer.hpp  OriginalMeshDrawer.cpp  OriginalMeshDrawer.hpp  UnfoldMeshDrawer.cpp  UnfoldMeshDrawer.hpp  UnfoldTreeDrawer.cpp  UnfoldTreeDrawer.hpp
src/View/Variables/: Colorpalette.cpp  Colorpalette.hpp  Controls.cpp  Controls.hpp
